--- a/index.html
+++ b/index.html
@@ -10,24 +10,27 @@
 <body class="font-monserrat" >
      <header>
       <!-- BARRE DE NAVIGATION--------------------- -->
-            <nav>
-                  <ul class="flex justify-evenly items-center h-20 uppercase font-bold text-sm  flex-col lg:flex-row h-40">
-                        <li><a class="pt-2 hover:text-gray-300 border-t-indigo-800 border-t-4 transition-colors duration-300" href="#accueil">Accueil</a></li>
-                        <li><a class="pt-2 hover:text-gray-300 transition-colors duration-300" href="#school">Business school</a></li>
-                        <li><a  class="pt-2 hover:text-gray-300 transition-colors duration-300" href="#esport">Ecole esport</a></li>
-                        <li><a class="pt-2 hover:text-gray-300 transition-colors duration-300"  href="#game">Cours de jeux vidéo</a></li>
-                        <li><a class="pt-2 hover:text-gray-300 transition-colors duration-300"  href="#campus">Le campus</a></li>
-                        <li><a  class="pt-2 hover:text-gray-300 transition-colors duration-300" href="#newsroom">newsroom</a></li>
-                        <li><a class="pt-2 hover:text-gray-300 transition-colors duration-300"  href="#parents">Parents</a></li>
-                        <li><a  class="pt-2 hover:text-gray-300 transition-colors duration-300" href="#">fr en</a></li>
-                  </ul>
+            <nav class="flex relative h-20">
+                  <div class="flex">
+                        <i class="fa-solid fa-bars text-2xl lg:hidden"></i>
+                        <ul class="flex flex-col uppercase font-bold text-xs block absolute top-5 right-0 bg-white text-center lg:flex-row">
+                              <li><a class="pt-2 mx-3 hover:text-gray-300 border-t-indigo-800 border-t-4 transition-colors duration-300 pb-" href="#accueil">Accueil</a></li>
+                              <li><a class="pt-2 mx-3 hover:text-gray-300 transition-colors duration-300 " href="#school">Business school</a></li>
+                              <li><a  class="pt-2 mx-3 hover:text-gray-300 transition-colors duration-300" href="#esport">Ecole esport</a></li>
+                              <li><a class="pt-2 mx-3 hover:text-gray-300 transition-colors duration-300"  href="#game">Cours de jeux vidéo</a></li>
+                              <li><a class="pt-2 mx-3 hover:text-gray-300 transition-colors duration-300"  href="#campus">Le campus</a></li>
+                              <li><a  class="pt-2 mx-3 hover:text-gray-300 transition-colors duration-300" href="#newsroom">newsroom</a></li>
+                              <li><a class="pt-2 mx-3 hover:text-gray-300 transition-colors duration-300"  href="#parents">Parents</a></li>
+                              <li><a  class="pt-2 mx-3 hover:text-gray-300 transition-colors duration-300 border solid bg-gray-300 p-1 rounded-xl  hover:text-white hover:bg-black transition-colors duration-300" href="#">fr | en</a></li>
+                        </ul>
+                  </div>
             </nav>
             <!-- BANNIERE----------------------------- -->
             <div class="bg-gradient-to-r from-gray-500 to-black text-white uppercase flex flex-col items-center py-10">
-                  <img class="w-2/4" src="assets/images/logo-gc-hero.png" alt="Banniere Gaming Campus">
+                  <img class="object-cover" src="assets/images/logo-gc-hero.png" alt="Banniere Gaming Campus">
                   <h1 class="opacity-0">gaming campus</h1>
                   <p class=" text-center font-thin text-sm md:text-2xl">Passion. Professionnalisme. Performance</p>
-                  <a class="border solid px-5 py-2 mt-10 uppercase hover:bg-gradient-to-r from-black to-gray-500 hover:text-blue-400 transition-colors duration-300" href="#btn">Gaming campus en vidéo ></a>
+                  <a class="border solid md:px-5 py-2 mt-10 uppercase hover:bg-gradient-to-r from-black to-gray-500 hover:text-blue-400 transition-colors duration-300 text-sm" href="#btn">Gaming campus en vidéo ></a>
             </div>
             <!--  TEXTE ENTETE--------------------------- -->
             <div class="m-10 text-center">
@@ -36,7 +39,7 @@
      </header>
      <main>
       <!--  1ERE SECTION DU CONTENU-------------------- -->
-            <section class="bg-black text-white flex justify-evenly text-center px-10 py-20">
+            <section class="bg-black text-white flex justify-evenly text-center px-10 py-20 flex flex-col lg:flex-row">
                   <!-- Gaming business school--------- -->
                   <div class="px-8 flex flex-col items-center">
                         <img class="mb-5" src="assets/images/logo-gbs-home.png" alt="Logo GBS">
@@ -62,7 +65,7 @@
             <!-- 2EME SECTION DU CONTENU ---------------->
             <section class="py-20 bg-gray-100">
                   <!-- Les news du campus -->
-                  <div class="flex justify-around items-center">
+                  <div class="flex justify-around items-center flex-col mb-6 lg:flex-row">
                         <div>                       
                               <h3 class="uppercase text-3xl">Les news du campus</h3>
                               <p class="mb-10 text-sm">Suivez l'actualité de Gaming Campus de G Guru GBS et G Academy.</p>
@@ -70,23 +73,23 @@
                         <a class=" font-monserratbold text-sm border solid border-black px-5 py-2 uppercase  hover:text-gray-300 hover:bg-black transition-colors duration-300"href="#btn">La newsroom ></a>
                   </div>
                   <!-- Réunion d'informations------------ -->
-                  <div class="flex">
-                        <div class=" flex flex-col justify-center align-center mx-20">
-                              <img  class="shadow-lg shadow-gray-700 mb-6" src="assets/images/inauguration_gaming_campus_photo.jpg" alt="Réunion">
+                  <div class="flex flex-col lg:flex-row">
+                        <div class=" flex flex-col justify-center align-center mx-20 mb-6">
+                              <img  class="object-cover shadow-lg shadow-gray-700 mb-6" src="assets/images/inauguration_gaming_campus_photo.jpg" alt="Réunion">
                               <h3 class="font-monserratbold mb-2" >Réunion d'information 19 décembre</h3>
                               <p class="mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis amet aspernatur maxime quia nobis aut quam accusantium, maiores facere. Quaerat!</p>
                               <a class=" font-monserratbold text-sm text-violet-800 uppercase" href="#btn">Sur inscription ></a>
                         </div>
                         <!-- Paris Gamme----------------- -->
-                        <div class=" flex flex-col justify-center align-center mx-20">
-                              <img class="shadow-lg shadow-gray-700 mb-6" src="assets/images/pgw18home.jpg" alt="#PGW">
+                        <div class=" flex flex-col justify-center align-center mx-20  mb-6">
+                              <img class="object-cover shadow-lg shadow-gray-700 mb-6" src="assets/images/pgw18home.jpg" alt="#PGW">
                               <h3 class="font-monserratbold mb-2">Paris gammes week 2018 et réunions d'information</h3>
                               <p class="mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis amet aspernatur maxime quia nobis aut quam accusantium, maiores facere. Quaerat!</p>
                               <a class=" font-monserratbold text-sm  text-violet-800 uppercase" href="#btn" href="#btn">Lire la suite ></a>
                         </div>
                         <!-- Inauguration---------------- -->
-                        <div class=" flex flex-col justify-center align-center mx-20">
-                              <img class="shadow-lg shadow-gray-700 mb-6" src="assets/images/inauguration_gaming_campus_photo.jpg" alt="Inauguration">
+                        <div class=" flex flex-col justify-center align-center mx-20  mb-6">
+                              <img class="object-cover shadow-lg shadow-gray-700 mb-6" src="assets/images/inauguration_gaming_campus_photo.jpg" alt="Inauguration">
                               <h3 class="font-monserratbold mb-2">inauguration gaming campus lyon</h3>
                               <p class="mb-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis amet aspernatur maxime quia nobis aut quam accusantium, maiores facere. Quaerat!</p>
                               <a class=" font-monserratbold text-sm  text-violet-800 uppercase" href="#btn" href="#btn">Lire la suite ></a>
@@ -97,33 +100,33 @@
      <!--FOOTER-------------------------------------- -->
      <footer>
       <!-- LOGO------------------------------------ -->
-            <div class="flex justify-around  py-10">
+            <div class="py-10 flex flex-col items-center justify-center lg:flex-row">
                   <div class="w-60">
-                        <img class="m-auto" src="assets/images/logo-gc-footer.jpg" alt="Logo Gaming Campus">
+                        <img class="m-auto mb-6" src="assets/images/logo-gc-footer.jpg" alt="Logo Gaming Campus">
                   </div>
                   <!-- Infos pratiques------------- -->
                   <div class="w-60">
                         <h4 class="uppercase font-monserratbold">Infos pratiques</h4>
                         <ul class="leading-loose">
-                              <li><a href="#">Gaming Business School</a></li>
-                              <li><a href="#">Gaming academy</a></li>
-                              <li><a href="#">Gaming Guru</a></li>
-                              <li><a href="#">Recrutement</a></li>
-                              <li><a href="#">Investisseurs</a></li>
-                              <li><a href="#">Mentions légales</a></li>
-                              <li><a href="#">C.G.U</a></li>
+                              <li ><a href="#">Gaming Business School</a></li>
+                              <li ><a href="#">Gaming academy</a></li>
+                              <li ><a href="#">Gaming Guru</a></li>
+                              <li ><a href="#">Recrutement</a></li>
+                              <li ><a href="#">Investisseurs</a></li>
+                              <li ><a href="#">Mentions légales</a></li>
+                              <li class="mb-3 lg:mb-0"><a href="#">C.G.U</a></li>
                         </ul>
                   </div>
                   <!-- Parents------------------------- -->
                   <div class="w-60">
                         <h4 class="uppercase font-monserratbold">Parents</h4>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis amet aspernatur maxime quia nobis aut quam accusantium, maiores facere. Quaerat!</p>
-                        <a href="#btn">En savoir plus</a>
+                        <a class=" hover:text-orange-500" href="#btn">En savoir plus</a>
                   </div>
                   <!-- nous contacter - nous suivre-- -->
                   <div class="w-60">
                         <div class="mb-5">
-                              <h4 class="uppercase font-monserratbold">Nous contacter</h4>
+                              <h4 class="uppercase font-monserratbold mt-3 lg:mt-0">Nous contacter</h4>
                               <p>Tel. 04.28.29.81.03</p>
                               <p>contact@gaming.campus.fr</p>
                         </div>
@@ -140,33 +143,33 @@
             </div>
             <!-- TRAIT SEPARATEUR-------------------- -->
             <div class="border border-grey-500 border-solid max-w-90 mx-20"></div>
-            <div class="flex justify-around items-center py-10">
+            <div class="flex justify-around items-center py-10 flex flex-col lg:flex-row">
                   <div>
                         <!-- Ils parlent de nous------- -->
                         <h4 class="uppercase font-monserratbold">Ils parlent de nous</h4>
-                        <p class="text-sm">Voir toutes les retombées presse.</p>
+                        <p class="text-sm mb-5 lg:mb-0">Voir toutes les retombées presse.</p>
                   </div>
                   <!-- liens vers les sites -->
-                  <div class="flex justify-between w-1/2">
-                        <a href="#https://www.lefigaro.fr/"><img src="assets/images/figaro.png" alt="Le Figaro"></a>
-                        <a href="#https://www.challenges.fr/"><img src="assets/images/challenges.png" alt="Challenge"></a>
-                        <a href="#https://www.leparisien.fr/"><img src="assets/images/leparisien.png" alt="Le Parisien"></a>
-                        <a href="#https://www.lemonde.fr/"><img src="assets/images/lemonde.png" alt="Le Monde"></a>
-                        <a href="#https://www.lesechos.fr/"><img src="assets/images/echos.png" alt="Les Echos"></a>
-                        <a href="#https://www.bfmtv.com/"><img src="assets/images/bfm.png" alt="BFM TV"></a>
-                        <a href="#https://www.lequipe.fr/"><img src="assets/images/lepoint.png" alt="L'Equipe"></a>
+                  <div class="flex flex-col items-center lg:flex-row justify-between w-1/2">
+                        <a href="#https://www.lefigaro.fr/"><img class="mb-3 lg:mb-0" src="assets/images/figaro.png" alt="Le Figaro"></a>
+                        <a href="#https://www.challenges.fr/"><img class="mb-3 lg:mb-0" src="assets/images/challenges.png" alt="Challenge"></a>
+                        <a href="#https://www.leparisien.fr/"><img class="mb-3 lg:mb-0"src="assets/images/leparisien.png" alt="Le Parisien"></a>
+                        <a href="#https://www.lemonde.fr/"><img class="mb-3 lg:mb-0"src="assets/images/lemonde.png" alt="Le Monde"></a>
+                        <a href="#https://www.lesechos.fr/"><img class="mb-3 lg:mb-0"src="assets/images/echos.png" alt="Les Echos"></a>
+                        <a href="#https://www.bfmtv.com/"><img class="mb-3 lg:mb-0"src="assets/images/bfm.png" alt="BFM TV"></a>
+                        <a href="#https://www.lequipe.fr/"><img class="mb-3 lg:mb-0"src="assets/images/lepoint.png" alt="L'Equipe"></a>
                   </div>
             </div>
             <!-- Partenaire officiels -->
-            <div class="bg-black py-5" >
+            <div class="bg-black py-5 " >
                   <h4 class="text-white text-center font-monserratbold uppercase mb-5 ">Partenaires officiels</h4>
-                  <div class="bg-black flex justify-around">
-                        <a href="#https://www.appolo.fr/"><img src="assets/images/apollo.png" alt="Appolo"></a>
-                        <a href="#https://www.chiliz.com/"><img src="assets/images/chiliz.png" alt="Chiliz"></a>
-                        <a href="#https://www.omen.com/fr/fr.html"><img src="assets/images/omen.png" alt="Omen"></a>
-                        <a href="#https://www.joa.fr/"><img src="assets/images/joa.png" alt="Joa"></a>
-                        <a href="#https://www.needforseat.com/?srsltid=AfmBOorYH1FajMErndWq59-SZ8osrPXkxIri717_GsZskkYQLZ5mUXei"><img src="assets/images/maxonomic.png" alt="Maxnomic"></a>
-                        <a href="#https://www.creditmutuel.fr/home/index.html"><img src="assets/images/credit-mutuel.png" alt="Crédit mutuel"></a>
+                  <div class="bg-black flex justify-around flex flex-col items-center lg:flex-row">
+                        <a href="#https://www.appolo.fr/"><img class="mb-3 lg:mb-0" src="assets/images/apollo.png" alt="Appolo"></a>
+                        <a href="#https://www.chiliz.com/"><img class="mb-3 lg:mb-0" src="assets/images/chiliz.png" alt="Chiliz"></a>
+                        <a href="#https://www.omen.com/fr/fr.html"><img class="mb-3 lg:mb-0" src="assets/images/omen.png" alt="Omen"></a>
+                        <a href="#https://www.joa.fr/"><img class="mb-3 lg:mb-0" src="assets/images/joa.png" alt="Joa"></a>
+                        <a href="#https://www.needforseat.com/?srsltid=AfmBOorYH1FajMErndWq59-SZ8osrPXkxIri717_GsZskkYQLZ5mUXei"><img class="mb-3 lg:mb-0" src="assets/images/maxonomic.png" alt="Maxnomic"></a>
+                        <a href="#https://www.creditmutuel.fr/home/index.html"><img class="mb-3 lg:mb-0" src="assets/images/credit-mutuel.png" alt="Crédit mutuel"></a>
                   </div>
             </div>
             <!-- Cookies -->
